--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -1,9 +1,48 @@
 body {
   color: #111;
-  font-family: helvetica, arial, sans-serif;
-  font-size: 18px;
-  font-weight: 400;
-  letter-spacing: .025em;
-  line-height: 1.5;
+  font-family: 'calibre-light', arial, sans-serif;
+  font-size: 22px;
+  line-height: 2.25;
+  font-stretch: normal;
+  font-style: normal;
 }
 
+.strong{
+  font-family: 'calibre-regular', arial, sans-serif;
+}
+
+h4 {
+  font-size: 24px;
+  line-height: 1.375;
+  font-family: 'calibre-light';
+}
+
+h3 {
+  font-size: 11px;
+  line-height: 2.25;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  font-family: 'calibre-regular';
+}
+
+a {
+  border-bottom: 1px solid transparent;
+  transition: border-bottom-color 1200ms cubic-bezier(0, 0, 0.2, 1);
+  display: inline;
+  text-decoration: none;
+  font-family: 'calibre-regular';
+  color: inherit;
+}
+
+
+a:hover {
+  border-bottom-color: #000;
+}
+
+p.future {
+  font-family: monospace;
+  background: #f3e4e4;
+  border: 1px dashed red;
+  margin: 40px;
+  padding: 40px;
+}
