--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -11,10 +11,12 @@ body {
   font-family: 'calibre-regular', arial, sans-serif;
 }
 
-h4 {
-  font-size: 24px;
-  line-height: 1.375;
-  font-family: 'calibre-light';
+h2 {
+  font-size: 26px;
+  line-height: 1.38462;
+  font-family: 'domaineDiaplay-black';
+  font-stretch: normal;
+  font-style: normal;
 }
 
 h3 {
@@ -24,6 +26,13 @@ h3 {
   text-transform: uppercase;
   font-family: 'calibre-regular';
 }
+
+h4 {
+  font-size: 24px;
+  line-height: 1.375;
+  font-family: 'calibre-light';
+}
+
 
 a {
   border-bottom: 1px solid transparent;
