--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -11,6 +11,14 @@ body {
   font-family: 'calibre-regular', arial, sans-serif;
 }
 
+h1 {
+  font-size: 44px;
+  line-height: 1.04348;
+  font-family: 'calibre-regular';
+  font-stretch: normal;
+  font-style: normal;
+}
+
 h2 {
   font-size: 26px;
   line-height: 1.38462;
@@ -35,14 +43,13 @@ h4 {
 
 
 a {
-  border-bottom: 1px solid transparent;
+  border-bottom: 1px solid rgba(0,0,0,0.1);
   transition: border-bottom-color 1200ms cubic-bezier(0, 0, 0.2, 1);
   display: inline;
   text-decoration: none;
   font-family: 'calibre-regular';
   color: inherit;
 }
-
 
 a:hover {
   border-bottom-color: #000;
