Casestudy css grid

--- a/src/containers/CaseStudy/CaseStudy.css
+++ b/src/containers/CaseStudy/CaseStudy.css
@@ -1,3 +1,13 @@
 .casestudy__block {
   margin-top: 160px;
 }
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  max-width:1400px;
+  margin:0 auto;
+  padding: 0 6%;
+  grid-column-gap: 7.5%;
+  align-items: center;
+}
