--- a/src/containers/CaseStudy/CaseStudy.css
+++ b/src/containers/CaseStudy/CaseStudy.css
@@ -3,11 +3,19 @@
 }
 
 .grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  max-width:1400px;
+  display: flex;
   margin:0 auto;
-  padding: 0 6%;
-  grid-column-gap: 7.5%;
   align-items: center;
+  justify-content: center;
+  padding: 0 2%;
+}
+
+.grid > div {
+  margin: 0 4%
+}
+
+@media only screen and (max-width: 768px) {
+  .grid {
+    display: block;
+  }
 }
