Started work grid

--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -42,7 +42,13 @@ h4 {
 }
 
 
-a {
+p a,
+span a, 
+h1 a,
+h2 a,
+h4 a,
+h5 a,
+h6 a {
   border-bottom: 1px solid rgba(0,0,0,0.1);
   transition: border-bottom-color 1200ms cubic-bezier(0, 0, 0.2, 1);
   display: inline;
