--- a/src/containers/CaseStudy/CaseStudy.css
+++ b/src/containers/CaseStudy/CaseStudy.css
@@ -1,17 +1,21 @@
+.casestudy {
+  background: #f9f9f9
+}
+
 .casestudy__block {
   margin-top: 160px;
 }
 
 .grid {
   display: flex;
-  margin:0 auto;
+  margin: 0 auto;
   align-items: center;
   justify-content: center;
   padding: 0 4%;
   max-width: 1600px;
 }
 
-.grid > div {
+.grid>div {
   margin: 0 4%
 }
 
