--- a/src/components/CaseStudyCover/CaseStudyCover.css
+++ b/src/components/CaseStudyCover/CaseStudyCover.css
@@ -1,3 +1,10 @@
+.casestudy__cover {
+  height: 100vh;
+  width: 100%;
+  position: relative;
+  color: white;
+}
+
 .casestudy__fill {
   background-color: #161616;
   height: 150vh;
@@ -5,25 +12,21 @@
   position: absolute;
   top: 0;
   width: 100%;
-  z-index: -10;
-}
-
-.casestudy__cover {
-  height: 100vh;
-  position: relative;
-  width: 100%;
-  color: white;
-  z-index: 0;
+  z-index: 10;
 }
 
 .casestudy__header {
   left: 0;
-  padding-top: 180px;
+  padding-top: calc(4em + 8vw);
   position: absolute;
   top: 0;
   z-index: 30;
-  padding-left: 80px;
-  padding-right: 80px;
+  padding-left: 6vw;
+  padding-right: 6vw;
+}
+
+.casestudy__header__item {
+  margin-bottom: 3.5vh;
 }
 
 .casestudy__splash {
@@ -36,12 +39,26 @@
 }
 
 .casestudy__splash__bg {
-    height: 100%;
-    left: 0;
-    overflow: hidden;
-    position: absolute;
-    top: 0;
-    width: 100%;
+  height: 100%;
+  left: 0;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.casestudy__splash__bg video{
+  height:100%;
+}
+
+.casestudy__splash__fr {
+  position: absolute;
+  width: auto;
+  max-width: 100%;
+  z-index: 10;
 }
 
 .-cover {
