--- a/src/containers/App/App.css
+++ b/src/containers/App/App.css
@@ -2,7 +2,7 @@ body {
   background: #f9f9f9;
 }
 
-html, body, #root{
+html, body, #root {
   height: 100%;
 }
 
@@ -28,9 +28,20 @@ p.future {
 .views {
   height: 100%;
   max-height: 100%;
-  transition: transform 600ms cubic-bezier(0, 0, 0.2, 1);
-  will-change: transform;
   width: 100%;
+  overflow-x: hidden;
+}
+
+/* View changes */
+
+.view__child {
+  opacity: 0;
+  transition: opacity 600ms cubic-bezier(0, 0, 0.2, 1);
+  /* will-change: opacity; */
+}
+
+.-is-active .view__child {
+  opacity: 1;
 }
 
 /* Individual view */
@@ -42,6 +53,8 @@ p.future {
   overflow-y: auto;
   max-height: 100%;
   height: 100%;
+  transition: transform 600ms cubic-bezier(0, 0, 0.2, 1);
+  will-change: transform;
   width: 100%;
   -webkit-overflow-scrolling: touch;
 }
@@ -50,8 +63,6 @@ p.future {
 
 .view--aside {
   position: fixed;
-  transition: transform 600ms cubic-bezier(0, 0, 0.2, 1);
-  will-change: transform;
   z-index: 10;
 }
 
@@ -59,8 +70,6 @@ p.future {
 
 .root {
   position: relative;
-  transition: transform 600ms cubic-bezier(0, 0, 0.2, 1);
-  will-change: transform;
   z-index: 20;
   height: 100%;
 }
