--- a/src/containers/About/slices/Columns/Columns.css
+++ b/src/containers/About/slices/Columns/Columns.css
@@ -17,3 +17,11 @@
 .about__columns.-col-3 .about__columns__col {
   flex-basis: 33.33%;
 }
+
+.-spacebelow {
+  margin-bottom: 50vh!important;
+}
+
+.-above {
+  margin-top: 50vh!important;
+}
