--- a/src/containers/About/About.css
+++ b/src/containers/About/About.css
@@ -4,9 +4,9 @@
 
 .about__inner h1,
 .about__inner h2,
-.about__inner h3
-.about__inner h4
-.about__inner h5
-.about__inner h6 {
+.about__inner h4,
+.about__inner h5,
+.about__inner h6,
+.about__inner strong {
   color: #fff;
 }
