--- a/src/components/Homepage/Homepage.css
+++ b/src/components/Homepage/Homepage.css
@@ -6,11 +6,13 @@
   justify-content: center;
 }
 .homepage__inner {
-  height: calc(100vh - 7vw);
-  width: calc(100vw - 7vw);
+  height: calc(100vh - 2em - 2vw);
+  width: calc(100vw - 2em - 2vw);
+  overflow: hidden;
 }
 
-.homepage img {
+.homepage__inner__video,
+.homepage__inner__image {
   width: 100%;
   height: 100%;
   object-fit: cover;
