--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,7 +1,7 @@
 .nav {
   background-color: transparent;
   left: 0;
-  padding-top: 6vw;
+  padding-top: calc(1.5em + 3vw);
   position: fixed;
   top: 0;
   width: 100%;
@@ -9,8 +9,7 @@
 }
 
 .nav__inner {
-  padding-left: 6vw;
-  padding-right: 6vw;
+  padding: 0 calc(1.5em + 3vw);
   display: flex;
   justify-content: space-between;
 }
