--- a/src/containers/App/App.css
+++ b/src/containers/App/App.css
@@ -37,7 +37,7 @@ p.future {
 .view__child {
   opacity: 0;
   transition: opacity 600ms cubic-bezier(0, 0, 0.2, 1);
-  /* will-change: opacity; */
+  will-change: opacity;
 }
 
 .-is-active .view__child {
