--- a/src/containers/CaseStudy/slices/Diptych/Diptych.scss
+++ b/src/containers/CaseStudy/slices/Diptych/Diptych.scss
@@ -1,7 +1,7 @@
 .casestudy__diptych__item {
   flex-basis: 50%;
-}
 
-.casestudy__diptych__item > img{
-  width:100%;
+  & > img {
+    width: 100%;
+  }
 }
