--- a/src/containers/App/App.scss
+++ b/src/containers/App/App.scss
@@ -2,13 +2,15 @@ body {
   background: #f9f9f9;
 }
 
-html, body, #root {
+#root,
+body,
+html {
   height: 100%;
 }
 
 .homepageLink {
   display: block;
-  color: black
+  color: black;
 }
 
 img {
@@ -16,17 +18,17 @@ img {
 }
 
 /* Container */
-
 ::selection {
-  background: #ECAA9A; /* WebKit/Blink Browsers */
+  background: #ECAA9A;
+  /* WebKit/Blink Browsers */
 }
+
 ::-moz-selection {
-  background: #ECAA9A; /* Gecko Browsers */
+  background: #ECAA9A;
+  /* Gecko Browsers */
 }
 
-/* Container */
-
-p.future {
+.future {
   font-family: monospace;
   background: #f3e4e4;
   border: 1px dashed red;
@@ -35,7 +37,6 @@ p.future {
 }
 
 /* Container */
-
 .views {
   height: 100%;
   max-height: 100%;
@@ -44,19 +45,19 @@ p.future {
 }
 
 /* View changes */
-
 .view__child {
   opacity: 0;
-  transition: opacity 600ms cubic-bezier(0, 0, 0.2, 1);
+  transition: opacity 600ms cubic-bezier(0, 0, .2, 1);
   will-change: opacity;
 }
 
-.-is-active .view__child {
-  opacity: 1;
+.-is-active {
+  .view__child {
+    opacity: 1;
+  }
 }
 
 /* Individual view */
-
 .view {
   left: 0;
   top: 0;
@@ -64,21 +65,19 @@ p.future {
   overflow-y: auto;
   max-height: 100%;
   height: 100%;
-  transition: transform 600ms cubic-bezier(0, 0, 0.2, 1);
+  transition: transform 600ms cubic-bezier(0, 0, .2, 1);
   will-change: transform;
   width: 100%;
   -webkit-overflow-scrolling: touch;
 }
 
 /* Sidebars */
-
 .view--aside {
   position: fixed;
   z-index: 10;
 }
 
 /* VIEWS */
-
 .root {
   position: relative;
   z-index: 20;
