--- a/src/components/VideoNode/VideoNode.scss
+++ b/src/components/VideoNode/VideoNode.scss
@@ -1,3 +1,5 @@
+@import '../../styles/variables.scss';
+
 .videoNode {
   position: relative;
   cursor: pointer;
@@ -7,6 +9,10 @@
     position: relative;
     z-index: -10;
     display: block;
+
+    &[poster] {
+      object-fit: cover;
+    }
   }
 
   &__iconWrap {
