--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,2 +1,8 @@
 $variable-spacing: calc(1.5em + 3vw);
 $variable-spacing-lg: calc(1.5em + 5vw);
+
+$color-primary: #ecaa9a;
+$color-secondary: #ffa500;
+
+$white: #fff;
+$black: #000;
