--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,9 @@
 $variable-spacing: calc(1.5em + 3vw);
 $variable-spacing-lg: calc(1.5em + 5vw);
 
+$variable-spacing-vh: calc(1.5em + 6vw);
+$variable-spacing-vh-lg: calc(1.5em + 8vw);
+
 $color-primary: #ecaa9a;
 $color-secondary: #ffa500;
 
