--- a/src/components/Work/Work.scss
+++ b/src/components/Work/Work.scss
@@ -12,8 +12,30 @@
   flex-basis: 33%;
   padding: 4%;
   box-sizing: border-box;
+  transition: transform 600ms cubic-bezier(0, 0, .2, 1);
+  position: relative;
 
   img {
     width: 100%;
+  }
+
+  &__item--svg {
+    position: absolute;
+    z-index: 50;
+    width: 20% !important;
+    top: 50%;
+    left: 50%;
+    transform: translate3d(-50%, -50%, 0);
+    opacity: 0;
+    transition: opacity 200ms cubic-bezier(0, 0, .2, 1);
+
+  }
+
+  &:hover {
+    transform: scale(1.02);
+
+    .work__link__item--svg {
+      opacity: 1;
+    }
   }
 }
