--- a/src/containers/CaseStudy/slices/Gallery/Gallery.scss
+++ b/src/containers/CaseStudy/slices/Gallery/Gallery.scss
@@ -1,8 +1,32 @@
 .caseStudy__gallery {
   position: relative;
-  padding-bottom: 50% !important;
   overflow: hidden;
+  outline: none;
+  cursor: pointer;
 
+  &__indicators {
+    display: flex;
+    margin-top: 30px;
+    align-items: center;
+    width: 100%;
+    justify-content: center;
+  }
+
+  &__indicator {
+    width: 40px;
+    height: 4px;
+    background: black;
+    opacity: .15;
+    display: inline-block;
+    margin: 0 10px;
+    transition: 600ms opacity ease;
+
+    &--active {
+      z-index: 100;
+      position: relative;
+      opacity: .75;
+    }
+  }
   &__img {
     bottom: 0;
     left: 0;
