VideoNode component improvements

--- a/src/components/VideoNode/MuteControl/MuteControl.scss
+++ b/src/components/VideoNode/MuteControl/MuteControl.scss
@@ -21,7 +21,8 @@
         stroke: $white;
         stroke-width: 1.5;
         fill: none;
- 
+        transition: all cubic-bezier(.25, .1, .25, 1) 400ms;
+
         &--muted {
           transform: translateX(-50%);
           opacity: 0;
