--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -9,6 +9,32 @@
   width: 100%;
   z-index: 1004;
   box-sizing: border-box;
+  pointer-events: none;
+
+  .icon {
+    pointer-events: all;
+    padding-top: 5px;
+    height: 8px;
+    width: 20px;
+    cursor: pointer;
+  }
+}
+
+.icon__item {
+  position: absolute;
+  width: 8px;
+  height: 1.5px;
+  background: white;
+  transition: transform 300ms ease, opacity 300ms ease;
+}
+
+
+.icon__item:nth-child(1) {
+  transform: translate3d(0, -4px, 0);
+}
+
+.icon__item:nth-child(2) {
+  transform: translate3d(0, 4px, 0);
 }
 
 .nav__inner {
