--- a/src/containers/About/slices/Text/Text.scss
+++ b/src/containers/About/slices/Text/Text.scss
@@ -1,12 +1,28 @@
+@import '../../../../styles/breakpoints.scss';
+
 .about__text {
   text-align: center;
-  margin: 5vh auto!important;
+  margin: 5vh 4% !important;
+
+  /*
+  For the future:
+  
+  &-keepBreak {
+    br {
+      display: inherit;
+    }
+  }
+  */
+
+  br {
+    display: none;
+  }
 
   &.-full-height {
     min-height: 100vh;
   }
 
   &.-small-caption {
-    margin-top: 25vh!important;
+    margin-top: 25vh !important;
   }
 }
