--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -17,7 +17,7 @@ em {
 }
 
 h1 {
-  font-size: 44px;
+  font-size: calc(32px + .4vw);
   line-height: 1.04348;
   font-family: 'calibre-regular';
   font-stretch: normal;
