--- a/src/containers/About/slices/Instagram/Instagram.scss
+++ b/src/containers/About/slices/Instagram/Instagram.scss
@@ -4,7 +4,7 @@
   grid-template-columns: auto auto auto;
   grid-template-rows: auto;
   align-items: center;
-  margin: 4%;
+  margin: 4% auto;
 
   &__item {
     width: 100%;
