Made gallery v2 compatable, started support for previous button, index support

--- a/src/containers/CaseStudy/slices/Gallery/Gallery.scss
+++ b/src/containers/CaseStudy/slices/Gallery/Gallery.scss
@@ -1,4 +1,4 @@
-.caseStudy__gallery {
+s.caseStudy__gallery {
 
 
   &__imageContainer {
@@ -31,7 +31,7 @@
       opacity: .75;
     }
   }
-  &__img {
+  &__img {but
     bottom: 0;
     left: 0;
     position: absolute;
