--- a/src/containers/CaseStudy/slices/Gallery/Gallery.scss
+++ b/src/containers/CaseStudy/slices/Gallery/Gallery.scss
@@ -1,4 +1,5 @@
-s.caseStudy__gallery {
+.caseStudy__gallery {
+  position: relative;
 
 
   &__imageContainer {
@@ -17,13 +18,14 @@ s.caseStudy__gallery {
   }
 
   &__indicator {
-    width: 40px;
-    height: 4px;
+    width: 35px;
+    height: 3px;
     background: black;
     opacity: .15;
     display: inline-block;
-    margin: 0 10px;
+    margin: 0 6px;
     transition: 600ms opacity ease;
+    cursor: pointer;
 
     &--active {
       z-index: 100;
@@ -31,7 +33,8 @@ s.caseStudy__gallery {
       opacity: .75;
     }
   }
-  &__img {but
+
+  &__img {
     bottom: 0;
     left: 0;
     position: absolute;
@@ -51,12 +54,25 @@ s.caseStudy__gallery {
   &__nav {
     position: absolute;
     top: 0;
-    bottom: 0;
+    width: 100%;
+    height: 100%;
     z-index: 10;
 
-    &--prev {
-      left: 0;
-      right: 50%;
+    &__item {
+      height: 100%;
+      position: absolute;
+
+      &--prev {
+        left: 0;
+        width: 25%;
+        cursor: w-resize;
+      }
+
+      &--next {
+        left: 25%;
+        width: 75%;
+        cursor: e-resize;
+      }
     }
   }
 }
