--- a/src/components/Work/Work.scss
+++ b/src/components/Work/Work.scss
@@ -1,22 +1,50 @@
 @import '../../styles/variables.scss';
+@import '../../styles/breakpoints.scss';
 
 .work__inner {
   display: flex;
-  max-width: 1400px;
   flex-wrap: wrap;
-  margin: $variable-spacing auto 0;
+  margin: $variable-spacing auto;
+  padding-top: $variable-spacing;
+
+  @include breakpoint(sm) {
+    padding-top: $variable-spacing;
+    padding-left: 8%;
+    padding-right: 8%;
+  }
   align-items: center;
 }
 
 .work__link {
-  flex-basis: 33%;
-  padding: 4%;
   box-sizing: border-box;
   transition: transform 600ms cubic-bezier(0, 0, .2, 1);
-  position: relative;
+  text-decoration: none;
+
+  @include breakpoint(sm) {
+    padding: 4%;
+    flex-basis: 50%;
+  }
+  @include breakpoint(md) {
+    flex-basis: 33%;
+  }
 
   img {
     width: 100%;
+  }
+
+  &__wrapper {
+    position: relative;
+  }
+
+  &__item--title {
+    color: $color-grey;
+    text-align: center;
+
+    @include breakpoint(sm) {
+      height: 0;
+      opacity: 0;
+      transition: opacity 200ms cubic-bezier(0, 0, .2, 1);
+    }
   }
 
   &__item--svg {
@@ -28,14 +56,16 @@
     transform: translate3d(-50%, -50%, 0);
     opacity: 0;
     transition: opacity 200ms cubic-bezier(0, 0, .2, 1);
-
   }
 
   &:hover {
-    transform: scale(1.02);
+    @include breakpoint(sm) {
+      transform: scale(1.02);
 
-    .work__link__item--svg {
-      opacity: 1;
+      .work__link__item--svg,
+      .work__link__item--title {
+        opacity: 1;
+      }
     }
   }
 }
