--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,6 +6,7 @@ $variable-spacing-vh-lg: calc(1.5em + 8vw);
 
 $color-primary: #ecaa9a;
 $color-secondary: #ffa500;
+$color-grey: #797979;
 
 $white: #fff;
 $black: #000;
