--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,40 +1,51 @@
+@import 'breakpoints.scss';
+
 body {
   color: #111;
   font-family: 'calibre-light', arial, sans-serif;
-  font-size: calc(17px + .2vw);
+  font-size: 16px;
   line-height: 2.25;
   font-stretch: normal;
   font-style: normal;
   overflow: hidden;
+
+  @include breakpoint (sm) {
+    font-size: 18px;
+  }
+  @include breakpoint (md) {
+    font-size: 20px;
+  }
+  @include breakpoint (lg) {
+    font-size: 21.5px;
+  }
 }
 
 .strong{
   font-family: 'calibre-regular', arial, sans-serif;
 }
 
-em {
+em,
+.em {
   font-style: italic;
 }
 
-h1 {
-  font-size: calc(32px + .4vw);
-  line-height: 1.04348;
+h1,
+.h1 {
+  font-size: 2em;
+  line-height: 1;
   font-family: 'calibre-regular';
-  font-stretch: normal;
-  font-style: normal;
 }
 
-h2 {
-  font-size: 26px;
+h2,
+.h2 {
+  font-size: 1.2em;
   line-height: 1.38462;
   font-family: 'domaineDiaplay-black';
-  font-stretch: normal;
-  font-style: normal;
 }
 
 h3,
 .h3 {
-  font-size: 11px;
+  font-size: .5em;
   line-height: 2.25;
   letter-spacing: 1px;
   text-transform: uppercase;
@@ -42,18 +53,17 @@ h3,
 }
 
 h4 {
-  font-size: 24px;
+  font-size: 1em;
   line-height: 1.375;
   font-family: 'calibre-light';
+
+  em {
+    font-family: 'TiemposHeadlineWeb-Light';
+    font-style: italic;
+    font-size: 22px;
+  }
 }
 
-h4 em {
-  font-family: "TiemposHeadlineWeb-Light";
-  font-stretch: normal;
-  font-style: normal;
-  font-style: italic;
-  font-size: 22px;
-}
 
 
 p a,
