--- a/src/containers/App/App.scss
+++ b/src/containers/App/App.scss
@@ -44,18 +44,18 @@ img {
   overflow-x: hidden;
 }
 
-/* View changes */
-.view__child {
-  opacity: 1;
-  transition: opacity 600ms cubic-bezier(0, 0, .2, 1);
-  will-change: opacity;
-}
+// /* View changes */
+// .view__child {
+//   opacity: 1;
+//   transition: opacity 600ms cubic-bezier(0, 0, .2, 1);
+//   will-change: opacity;
+// }
 
-.-is-active {
-  .view__child {
-    opacity: 1;
-  }
-}
+// .-is-active {
+//   .view__child {
+//     opacity: 1;
+//   }
+// }
 
 /* Individual view */
 .view {
