Not sure of the classNames prop on the CSSTransition component, will have to investigate further

--- a/src/containers/PrismicApp/PreviewRouter/PreviewRouter.scss
+++ b/src/containers/PrismicApp/PreviewRouter/PreviewRouter.scss
@@ -13,7 +13,7 @@
 }
 
 .slideRight-enter-active {
-    transform: translateX(100vw) 250ms ease-in;
+    transform: translateX(0) 250ms ease-in;
 }
 
 .slideRight-enter-done {}
