--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -23,3 +23,7 @@ $long-duration: 600ms;
 $base-duration: 400ms;
 $midi-duration: 300ms;
 $fast-duration: 200ms;
+
+
+$anim-slow: 1400ms;
+$anim-fast: 400ms;
