--- a/src/containers/App/viewPositions.scss
+++ b/src/containers/App/viewPositions.scss
@@ -1,49 +1,58 @@
-/* View changes */
+@import '../../styles/variables.scss';
 
+.view {
+  &:not(.-is-active) {
+    pointer-events: none;
+    overflow: hidden;
+  }
 
-
-
-/* Default */
-
-.view:not(.-is-active){
-  pointer-events: none;
-  overflow: hidden;
+  &:not(.root) {
+    &:not(.-is-active) {
+      .view__child {
+        opacity: 0;
+        transition: opacity 600ms cubic-bezier(0, 0, .2, 1);
+        will-change: opacity;
+      }
+    }
+  }
 }
 
 .work {
-  background-color: #fff;
+  background-color: $white;
   transform: translate3d(-50%, 0, 0);
 }
 
 .about {
-  background-color: #000;
+  background-color: $black;
   transform: translate3d(50%, 0, 0);
 }
 
 /* Active - Work */
 
-.-view-is-work > .work{
-  transform: translate3d(0, 0, 0);
+.-view-is-work {
+  &>.root {
+    transform: translate3d(100%, 0, 0);
+  }
+
+  &>.about {
+    transform: translate3d(100%, 0, 0);
+  }
+
+  &>.work {
+    transform: translate3d(0, 0, 0);
+  }
 }
 
-.-view-is-work > .about{
-  transform: translate3d(100%, 0, 0);
-}
+.-view-is-about {
+  &>.work {
+    transform: translate3d(-100%, 0, 0);
+  }
 
-.-view-is-work > .root{
-  transform: translate3d(100%, 0, 0);
-}
+  &>.about {
+    transform: translate3d(0, 0, 0);
+  }
 
-/* Active - About */
-
-.-view-is-about > .work{
-  transform: translate3d(-100%, 0, 0);
-}
-
-.-view-is-about > .about{
-  transform: translate3d(0, 0, 0);
-}
-
-.-view-is-about > .root{
-  transform: translate3d(-100%, 0, 0);
+  &>.root {
+    transform: translate3d(-100%, 0, 0);
+  }
 }
