--- a/src/containers/CaseStudy/slices/Columns/Columns.scss
+++ b/src/containers/CaseStudy/slices/Columns/Columns.scss
@@ -13,6 +13,7 @@
     &--media {
       max-width: 80em;
       margin: 0 auto;
+      transition: transform: 10ms linear;
     }
 
     &--text > div {
