--- a/src/containers/CaseStudy/CaseStudy.scss
+++ b/src/containers/CaseStudy/CaseStudy.scss
@@ -7,10 +7,12 @@
 .casestudy__block {
   margin-top: $variable-spacing-lg;
   opacity: 0;
-  transition: $anim-med opacity ease;
+  transform: translateY(50px);
+  transition: $anim-x-slow opacity ease, $anim-x-slow transform ease;
 
   &.-active {
     opacity: 1;
+    transform: translateY(0);
   }
 }
 
