--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -25,6 +25,6 @@ $midi-duration: 300ms;
 $fast-duration: 200ms;
 
 
+$anim-x-slow: 1800ms;
 $anim-slow: 1400ms;
-$anim-med: 900ms;
 $anim-fast: 400ms;
