--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -11,33 +11,91 @@
   box-sizing: border-box;
   pointer-events: none;
 
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+  }
+
+
   .icon {
     pointer-events: all;
     padding-top: 5px;
     height: 8px;
     width: 20px;
     cursor: pointer;
+
+    &__item {
+      position: absolute;
+      width: 8px;
+      height: 1.5px;
+      background: $white;
+      transition:
+        transform 300ms $ease-views,
+        opacity 300ms $ease-views,
+        background-color 300ms $ease-views;
+
+      // Applies to About & Grid
+
+      &:nth-child(1) {
+        transform: translate3d(0, -4px, 0);
+      }
+
+      &:nth-child(2) {
+        transform: translate3d(0, 4px, 0);
+      }
+
+      // Applies to only Grid
+
+      &:nth-child(3) {
+        transform: translate3d(12px, -4px, 0);
+      }
+
+      &:nth-child(4) {
+        transform: translate3d(12px, 4px, 0);
+      }
+    }
+
+    &--about__item {
+      width: 18px;
+    }
+  }
+
+  &--dark {
+    .icon__item {
+      background: $black;
+    }
   }
 }
 
-.icon__item {
-  position: absolute;
-  width: 8px;
-  height: 1.5px;
-  background: white;
-  transition: transform 300ms ease, opacity 300ms ease;
-}
+.-enabled {
+  .icon {
+    &--about__item {
+      background: $white;
 
+      &:nth-child(1) {
+        transform: translateX(2px) rotate(-45deg);
+      }
 
-.icon__item:nth-child(1) {
-  transform: translate3d(0, -4px, 0);
-}
+      &:nth-child(2) {
+        transform: translateX(2px) rotate(45deg);
+      }
+    }
 
-.icon__item:nth-child(2) {
-  transform: translate3d(0, 4px, 0);
-}
+    &--grid__item {
+      background: $black;
 
-.nav__inner {
-  display: flex;
-  justify-content: space-between;
+      &:nth-child(2) {
+        transform: translateX(5px) rotate(45deg) scale3d(2.25, 1, 1);
+      }
+
+      &:nth-child(3) {
+        transform: translateX(5px) rotate(-45deg) scale3d(2.25, 1, 1);
+      }
+
+      &:nth-child(1),
+      &:nth-child(4) {
+        opacity: 0;
+      }
+    }
+  }
 }
