--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -8,6 +8,8 @@ $color-primary: #ecaa9a;
 $color-secondary: #ffa500;
 $color-grey: #797979;
 
+$case-study-bg: #f9f9f9;
+
 $white: #fff;
 $black: #000;
 
@@ -15,10 +17,9 @@ $black: #000;
  * Animations
 *******************************************************************************/
 
-$ease: cubic-bezier(.25, .1, .25, 1);
-$ease-one: cubic-bezier(.9, 0, .1, 1);
-$ease-two: cubic-bezier(.14, 1, .34, 1);
-$ease-three: cubic-bezier(0, 0, .2, 1);
+$ease-standard: cubic-bezier(.4, 0, .2, 1);
+$ease-decel: cubic-bezier(0, 0, 2, 1);
+$ease-accel: cubic-bezier(.4, 0, 1, 1);
 
 $ease-views: cubic-bezier(0, 0, .2, 1);
 $ease-views-rev: cubic-bezier(8, 0, 1, 1);
@@ -31,3 +32,4 @@ $fast-duration: 200ms;
 $anim-x-slow: 1800ms;
 $anim-slow: 1400ms;
 $anim-fast: 400ms;
+$anim-x-fast: 200ms
