--- a/src/containers/CaseStudy/CaseStudy.scss
+++ b/src/containers/CaseStudy/CaseStudy.scss
@@ -1,7 +1,7 @@
 @import '../../styles/variables.scss';
 
 .casestudy {
-  background: #f9f9f9
+  background: $case-study-bg;
 }
 
 .casestudy__block {
