--- a/src/components/View/View.scss
+++ b/src/components/View/View.scss
@@ -1,6 +1,24 @@
 @import '../../styles/variables.scss';
 
 .view {
+  left: 0;
+  top: 0;
+  overflow-x: hidden;
+  overflow-y: auto;
+  max-height: 100%;
+  height: 100%;
+  transition: transform 600ms cubic-bezier(0, 0, .2, 1);
+  will-change: transform;
+  width: 100%;
+  -webkit-overflow-scrolling: touch;
+
+  &__inner {
+    overflow-x: hidden;
+    overflow-y: auto;
+    max-height: 100%;
+    height: 100%;
+  }
+
   &:not(.-is-active) {
     pointer-events: none;
     overflow: hidden;
@@ -15,6 +33,19 @@
       }
     }
   }
+}
+
+/* Sidebars */
+.view--aside {
+  position: fixed;
+  z-index: 10;
+}
+
+/* VIEWS */
+.root {
+  position: relative;
+  z-index: 20;
+  height: 100%;
 }
 
 .work {
