--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -30,6 +30,7 @@ $midi-duration: 300ms;
 $fast-duration: 200ms;
 
 $anim-x-slow: 1800ms;
+$anim-med: 900ms;
 $anim-slow: 1400ms;
 $anim-fast: 400ms;
 $anim-x-fast: 200ms
