--- a/src/components/VideoNode/VideoControls/VideoControls.scss
+++ b/src/components/VideoNode/VideoControls/VideoControls.scss
@@ -22,7 +22,7 @@
       box-sizing: border-box;
       user-select: none;
       flex-wrap: wrap;
-      transition: .25s transform ease, .25s opacity ease;
+      transition: $anim-fast transform $ease-decel, $anim-fast opacity $ease-decel;
 
     }
 
@@ -31,7 +31,7 @@
       top: 50%;
       left: 50%;
       transform: translate3d(-50%, -50%, 0);
-      transition: .25s transform ease, .25s opacity ease;
+      transition: $anim-fast transform $ease-decel, $anim-fast opacity $ease-decel;
       opacity: 0;
       pointer-events: none;
 
