--- a/src/components/MobileFrame/MobileFrame.scss
+++ b/src/components/MobileFrame/MobileFrame.scss
@@ -1,18 +1,16 @@
 .mobileFrame {
   width: 90%;
   margin: 0 auto;
-  border-radius: 30px;
   overflow: hidden;
   position: relative;
   box-shadow: 0 20px 70px rgba(0,0,0,0.25);
 
   &::after {
     content: '';
-    background: rgba(255,255,255,0.5);
+    background: rgba(255, 255, 255, .5);
     height: 4px;
     width: 30%;
     bottom: 15px;
-    border-radius: 4px;
     transform: translateX(-50%);
     left: 50%;
     position: absolute;
