--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,7 +4,7 @@ $variable-spacing-lg: calc(1.5em + 5vw);
 $variable-spacing-vh: calc(1.5em + 6vw);
 $variable-spacing-vh-lg: calc(1.5em + 8vw);
 
-$color-primary: #ecaa9a;
+$color-primary: #d59680; // Peach
 $color-secondary: #ffa500;
 $color-grey: #797979;
 
