--- a/src/components/CursorDot/CursorDot.scss
+++ b/src/components/CursorDot/CursorDot.scss
@@ -9,31 +9,50 @@ $spin-speed: 9600ms;
   to {transform: rotate(360deg);}
 }
 
-.cursorDot {
+.cursor {
   height: $cursor-size;
   width: $cursor-size;
   left: $cursor-size / -2;
   top: $cursor-size / -2;
-  background: $color-primary;
-  border-radius: 50%;
   pointer-events: none;
   position: fixed;
-  z-index: 1003;
-  transform: scale(0);
+  z-index: 20;
   transition: transform $anim-fast $ease-decel;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 
-  &__enabled {
-    transform: scale(1);
+  &__dot {
+    background: $color-primary;
+    border-radius: 50%;
+    width: 100%;
+    height: 100%;
+    transform: scale(0);
+    transition: transform $anim-xx-fast $ease-accel;
+
+    &--enabled {
+      transform: scale(1);
+    }
   }
 
-  &__overlay {
+  &__text {
+    $circle-text-offset: ($cursor-size - $text-circle-size) / 2;
     fill: $white;
     width: $text-circle-size;
     height: $text-circle-size;
     animation: spin $spin-speed linear infinite;
-  }
+    position: absolute;
+    top: $circle-text-offset;
+    left: $circle-text-offset;
 
+    svg {
+      opacity: 0;
+      transform: scale(.5);
+      transition: transform $anim-xx-fast $ease-accel, opacity $anim-xx-fast $ease-accel;
+    }
+
+    &--enabled {
+      svg {
+        opacity: 1;
+        transform: scale(1);
+      }
+    }
+  }
 }
