Fixed semi error

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -33,5 +33,5 @@ $anim-x-slow: 1800ms;
 $anim-slow: 1200ms;
 $anim-med: 900ms;
 $anim-fast: 400ms;
-$anim-x-fast: 200ms
-$anim-xx-fast: 100ms
+$anim-x-fast: 200ms;
+$anim-xx-fast: 100ms;
