--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,6 +7,7 @@ $variable-spacing-vh-lg: calc(1.5em + 8vw);
 $color-primary: #ecaa9a;
 $color-secondary: #ffa500;
 $color-grey: #797979;
+$color-grey-lt: #dadada;
 
 $case-study-bg: #f9f9f9;
 
