--- a/src/components/MobileFrame/MobileFrame.scss
+++ b/src/components/MobileFrame/MobileFrame.scss
@@ -3,7 +3,11 @@
   margin: 0 auto;
   overflow: hidden;
   position: relative;
-  box-shadow: 0 20px 70px rgba(0,0,0,0.25);
+  box-shadow: 0 20px 70px rgba(0, 0, 0, .25);
+
+  > * {
+    margin: -.1px;
+  }
 
   &::after {
     content: '';
