Got next-case-study working-ish motherfuckaaaaaaaaa

--- a/src/containers/App/App.scss
+++ b/src/containers/App/App.scss
@@ -40,3 +40,12 @@ img {
   width: 100%;
   overflow-x: hidden;
 }
+
+.peek{
+  max-height: 100;
+  overflow: hidden;
+
+  .casestudy__header__item--description {
+    opacity: 0
+  }
+}
