--- a/src/containers/CaseStudy/CaseStudy.scss
+++ b/src/containers/CaseStudy/CaseStudy.scss
@@ -2,27 +2,38 @@
 
 .casestudy {
   background: $case-study-bg;
-}
 
-.casestudy__block {
-  margin-top: $variable-spacing-lg;
-  // opacity: 0;
-  transform: translateY(50px);
-  transition: $anim-slow opacity $ease-decel, $anim-fast transform $ease-decel;
+  &--next {
+    max-height: 100vh;
+    overflow: hidden;
 
-  &--columns {
+    .casestudy__header__item {
+      &--description,
+      &--services {
+        opacity: 0;
+      }
+    }
+  }
+
+  &__block {
+    margin-top: $variable-spacing-lg;
+    transform: translateY(50px);
+    transition: $anim-slow opacity $ease-decel, $anim-fast transform $ease-decel;
+
+    &--columns {
+      position: relative;
+      z-index: 10;
+    }
+
+    &.-active {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
+  &__body {
     position: relative;
-    z-index: 10;
+    z-index: 30;
+    padding-bottom: $variable-spacing-lg;
   }
-
-  &.-active {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
-.casestudy__body {
-  position: relative;
-  z-index: 30;
-  padding-bottom: $variable-spacing-lg;
 }
